# Compiler-SysY-MIPS

./: README.md
Code-Genaration/: CMakeLists.txt
Code-Genaration/include/: IR.h  IRGenerator.h  MIPSGenerator.h  SemanticAnalyzer.h  SymbolTable.h  Token.h
Code-Genaration/src/: IRGenerator.cpp  MIPSGenerator.cpp  SemanticAnalyzer.cpp  main.cpp
Code-Optimization/: CMakeLists.txt
Code-Optimization/include/: IR.h  IRGenerator.h  MIPS.h  MIPSGenerator.h  Optimizer.h  OptimizerStructs.h  Parser.h  TreeNode.h
Code-Optimization/src/: IRGenerator.cpp  MIPSGenerator.cpp  Optimizer.cpp  Parser.cpp  main.cpp
Grammar-Interpretation/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  testfile1.txt  testfile2.txt  testfile3.txt  testfile4.txt  testfile5.txt  testfile6.txt
Grammatical-Analysis/: CMakeLists.txt
Grammatical-Analysis/include/: Parser.h  TreeNode.h
Grammatical-Analysis/src/: Lexer.cpp  Parser.cpp  main.cpp
Lexical Analysis/: config.json
Lexical Analysis/include/: Utils.h
Lexical Analysis/src/: Lexer.cpp
Lexical-Analysis/: CMakeLists.txt
Lexical-Analysis/include/: Lexer.h  Token.h
Lexical-Analysis/src/: main.cpp
Semantic-Analysis/: CMakeLists.txt
Semantic-Analysis/include/: Lexer.h  SemanticAnalyzer.h  SymbolTable.h
Semantic-Analysis/src/: Parser.cpp  SemanticAnalyzer.cpp  Utils.cpp  main.cpp
